--- a/fourier_transform/test.ipynb
+++ b/fourier_transform/test.ipynb
@@ -47,12 +47,76 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'shape'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m--------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m   Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-61-5ae052fa3d54>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mim\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcv2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mim_pth\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mold_size\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mim\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;31m# old_size is in (height, width) format\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mratio\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdesired_size\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mold_size\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'shape'"
+     ]
+    }
+   ],
+   "source": [
+    "import cv2\n",
+    "\n",
+    "desired_size = 368\n",
+    "im_pth = 'img/bridge.jpg'\n",
+    "\n",
+    "im = cv2.imread(im_pth)\n",
+    "old_size = im.shape[:2] # old_size is in (height, width) format\n",
+    "\n",
+    "ratio = float(desired_size)/max(old_size)\n",
+    "new_size = tuple([int(x*ratio) for x in old_size])\n",
+    "\n",
+    "# new_size should be in (width, height) format\n",
+    "\n",
+    "im = cv2.resize(im, (new_size[1], new_size[0]))\n",
+    "\n",
+    "delta_w = desired_size - new_size[1]\n",
+    "delta_h = desired_size - new_size[0]\n",
+    "top, bottom = delta_h//2, delta_h-(delta_h//2)\n",
+    "left, right = delta_w//2, delta_w-(delta_w//2)\n",
+    "\n",
+    "color = [0, 0, 0]\n",
+    "new_im = cv2.copyMakeBorder(im, top, bottom, left, right, cv2.BORDER_CONSTANT,\n",
+    "    value=color)\n",
+    "\n",
+    "cv2.imshow(\"image\", new_im)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "img = cv2.imread('img/bridge.jpg', 0)\n",
+    "img_128 = cv2.resize(img, dsize=(128, 128))\n",
+    "f = np.fft.fft2(img_128, [256, 256])\n",
+    "fshift = np.fft.fftshift(f)\n",
+    "rows, cols = img.shape\n",
+    "crow, ccol = rows // 256 , cols // 256\n",
+    "f_ishift = np.fft.ifftshift(fshift)\n",
+    "img_c = np.fft.ifft2(f_ishift)\n",
+    "img_c = np.abs(img_c)\n",
+    "plt.subplot(121),plt.imshow(img, cmap = 'gray')\n",
+    "plt.title('Original'), plt.xticks([]), plt.yticks([])\n",
+    "plt.subplot(122),plt.imshow(img_c, cmap = 'gray')\n",
+    "plt.title('C'), plt.xticks([]), plt.yticks([])\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
